--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,8 +77,8 @@ dependencies {
     implementation "com.yuyakaido.android:card-stack-view:2.3.4"
 
     //Navigation
-    implementation "androidx.navigation:navigation-fragment:$navigation_version"
-    implementation "androidx.navigation:navigation-ui:$navigation_version"
+    implementation "androidx.navigation:navigation-fragment:2.5.3"
+    implementation "androidx.navigation:navigation-ui:2.5.3"
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
